--- a/.gitignore
+++ b/.gitignore
@@ -19,6 +19,7 @@
 /client/.env.test.local
 /client/.env.production.local
 /client/.env
+/client/.gitignore
 
 /server/.DS_Store
 /server/.env.local
@@ -26,7 +27,10 @@
 /server/.env.test.local
 /server/.env.production.local
 /server/.env
+/server/.gitignore
 
+.DS_Store
+.gitignore
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
