--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Arang",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1421.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
@@ -22,6 +23,8 @@
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
+    "multer-s3": "^2.10.0",
     "nodemailer": "^6.9.3"
   },
   "devDependencies": {
