--- a/server/package.json
+++ b/server/package.json
@@ -11,6 +11,7 @@
   "author": "Arang",
   "license": "ISC",
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "aws-sdk": "^2.1421.0",
     "axios": "^1.4.0",
     "bcrypt": "^5.1.0",
@@ -19,6 +20,7 @@
     "crypto": "^1.0.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "fluent-ffmpeg": "^2.1.2",
     "helmet": "^7.0.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.3.4",
