--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "axios": "^1.4.0",
+    "dompurify": "^3.0.5",
     "framer-motion": "^10.12.17",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -63,6 +64,7 @@
     ]
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/react-draft-wysiwyg": "^1.13.4",
     "@types/react-slick": "^0.23.10",
     "@types/styled-components": "^5.1.26"
