--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.2",
     "react-icons": "^4.10.1",
+    "react-moment": "^1.1.3",
     "react-player": "^2.12.0",
     "react-quill": "^2.0.0",
     "react-router-dom": "^6.14.0",
